Update debian/* for 1.5.6

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,13 @@
-fwupd (1.5.5-3) UNRELEASED; urgency=medium
+fwupd (1.5.6-1) UNRELEASED; urgency=medium
 
   [ Steve McIntyre ]
   * Fix up Uploaders for the -signed packages - remove Jared, add Matthias
 
- -- Steve McIntyre <93sam@debian.org>  Tue, 26 Jan 2021 00:23:14 +0000
+  [ Mario Limonciello ]
+  * New upstream version (1.5.6)
+  * drop all upstream patches
+
+ -- superm1 <superm1@penguin.lxd>  Tue, 16 Feb 2021 10:17:50 -0600
 
 fwupd (1.5.5-2) unstable; urgency=medium
 
