--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-fwupd (1.5.7-2) UNRELEASED; urgency=medium
+fwupd (1.5.7-2) unstable; urgency=medium
 
   * Backport a patch to fix FTBFS on armhf for SBAT
 
- -- Mario Limonciello <mario.limonciello@dell.com>  Tue, 23 Feb 2021 16:43:15 -0600
+ -- Mario Limonciello <mario.limonciello@dell.com>  Tue, 23 Feb 2021 17:25:50 -0600
 
 fwupd (1.5.7-1) unstable; urgency=medium
 
