--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+fwupd (1.5.7-4) unstable; urgency=medium
+
+  * Fix generation of the vendor SBAT string
+
+ -- Steve McIntyre <93sam@debian.org>  Fri, 26 Mar 2021 00:27:48 +0000
+
 fwupd (1.5.7-3) unstable; urgency=medium
 
   * Backport a patch to fix regression in fwupdtool activate
