Move all the fwupdagent code to fwupdmgr
We want to provide a lot more in JSON format in the future, and this
will reduce a lot of code duplication.

As various people are using this in the wild, the existing fwupdagent
binary just shims requests to fwupdmgr as required. We'll stop doing
this for 2.0.0 or something.

--- a/src/fwupdagent.1
+++ b/src/fwupdagent.1
@@ -5,11 +5,9 @@ fwupdagent \- firmware updating agent
 .SH SYNOPSIS
 fwupdagent [CMD]
 .SH DESCRIPTION
-fwupdagent is a command line fwupd client intended to be used by scripts.
+fwupdagent used to be a command line fwupd client intended to be used by scripts.
+You should now use the 100% compatible \fBfwupdmgr --json\fR command instead.
 The output is JSON and guaranteed to be stable.
-.SH OPTIONS
-The fwupdagent command takes various options depending on the action.
-Run \fBfwupdagent --help\fR for the full list.
 .SH EXIT STATUS
 Commands that successfully execute will return "0".
 .SH SEE ALSO
